# xiso-ftp

./: .gitignore  CMakeLists.txt  README.md
lib/: License.txt
scripts/: mass_ftp_script.bat  mass_ftp_script.sh
src/: ftp.c  ftp.h  utils.c  utils.h  xdvdfs.c  xdvdfs.h  xiso_ftp.c
